NavigationPredictor: Preconnect to the main frame origin on onLoad

Currently, when "same_origin_preconnecting_allowed" param is set,
navigation predictor will preconnect to the origin of the main
frame document if navigation predictor's recommendation was to
preconnect.

This CL makes changes to preconnect to the origin of the main
frame document if navigation predictor's recommendation is to
"prefetch". This is still guarded behind
"same_origin_preconnecting_allowed" finch param.

Change-Id: I6549eba66d5dd300a877c548b62f0a2dcb587616
Bug: 915718
Reviewed-on: https://chromium-review.googlesource.com/c/1379703
Commit-Queue: Tarun Bansal <tbansal@chromium.org>
Reviewed-by: Ryan Sturm <ryansturm@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#617382}(cherry picked from commit 426a1ecfa0f9d7da72849ce43808aed2ad471f78 [formerly b8814c105b14ce114c0b11be0d4b4c6a0425ba50])
Reviewed-on: https://chromium-review.googlesource.com/c/1388169
Reviewed-by: Tarun Bansal <tbansal@chromium.org>
Cr-Commit-Position: refs/branch-heads/3626@{#493}
Cr-Branched-From: 5302c6863bade38a5d283a7cce26a309d8e8e755 [formerly d897fb137fbaaa9355c0c93124cc048824eb1e65]-refs/heads/master@{#612437}
Former-commit-id: 97cf5da9223d449ce8df1dd755f65470efe55914